<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#56314A"
        android:textSize="34sp"
        android:textStyle="bold"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.322" />

    <!--        Гайд линии          -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.625" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.750" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.875" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.375" />



    <!--          Кнопки          -->

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button1"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/AC"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus_minus"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/fact"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/guideline7"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/power"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.125"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/del"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.003"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mult"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.32"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button7"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button8"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button9"
        style="@style/CustomButtonStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/equal"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button10"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button11"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button12"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button13"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/zero"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button14"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/comma"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button15"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button16"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button17"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button18"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button19"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button20"
        style="@style/CustomButtonStyle2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.979"
        app:layout_constraintWidth_percent="0.25"
        app:layout_constraintHeight_percent="0.125"/>

</androidx.constraintlayout.widget.ConstraintLayout>